# map-proto1

./: .gitignore  Cargo.toml  DEVELOPER.md  README.md  default.nix  map_happ.code-workspace  package-lock.json  package.json
crates/coordinator-zomes/apis/holon_coord_api/: Cargo.toml
crates/coordinator-zomes/apis/holon_coord_api/src/: lib.rs  request.rs
crates/coordinator-zomes/apis/type_desc_coord_api/: Cargo.toml
crates/coordinator-zomes/apis/type_desc_coord_api/src/: builder.rs  helpers.rs  lib.rs  queries.rs
crates/coordinator-zomes/apis/type_desc_coord_api/tests/: descriptor_tests.rs
crates/coordinator-zomes/externs/: Cargo.toml
crates/coordinator-zomes/externs/src/: lib.rs
crates/coordinator-zomes/externs/tests/: extern_descriptor_tests.rs
crates/coordinator-zomes/impls/holon_coord_impl/: Cargo.toml
crates/coordinator-zomes/impls/type_desc_coord_impl/: Cargo.toml
crates/coordinator-zomes/impls/type_desc_coord_impl/src/: builder.rs  lib.rs  queries_impl.rs
crates/integrity-zomes/holon_integ/: Cargo.toml
crates/integrity-zomes/holon_integ/src/: holon.rs  lib.rs
crates/integrity-zomes/type_desc_integ/: Cargo.toml
crates/integrity-zomes/type_desc_integ/src/: descriptor.rs  lib.rs
crates/libs/types/descriptors/: Cargo.toml
crates/libs/types/descriptors/src/: descriptor.rs  lib.rs
crates/workdir/: dna.yaml
dahn/: README.md
dna/: README.md
dna/workdir/: dna.yaml  happ.yaml  web-happ.yaml
dna/zomes/coordination/holons/: Cargo.toml
dna/zomes/coordination/holons/src/: authority.rs  builder.rs  crud.rs  lib.rs  test_helpers.rs
dna/zomes/coordination/holons/tests/: descriptor_test.rs  holon_test.rs
dna/zomes/coordination/interface/: Cargo.toml
dna/zomes/coordination/interface/src/: lib.rs
dna/zomes/data/holon_space/holon/: Cargo.toml
dna/zomes/data/holon_space/holon/src/: lib.rs
dna/zomes/data/meta_space/descriptor/: Cargo.toml
dna/zomes/data/meta_space/descriptor/src/: lib.rs
dna/zomes/data/meta_space/exports/: Cargo.toml
dna/zomes/data/meta_space/interface/descriptor/: Cargo.toml
dna/zomes/data/meta_space/interface/descriptor/src/: lib.rs
dna/zomes/data/meta_space/interface/mapping/: Cargo.toml
dna/zomes/data/meta_space/types/: Cargo.toml
dna/zomes/integrity/holon_space/holon/: Cargo.toml
dna/zomes/integrity/holon_space/holon/src/: lib.rs
dna/zomes/integrity/holonspace/holon/: Cargo.toml
dna/zomes/integrity/holonspace/holon/src/: holon.rs  lib.rs
dna/zomes/integrity/meta_space/descriptor/: Cargo.toml
dna/zomes/integrity/meta_space/descriptor/src/: lib.rs
dna/zomes/integrity/metaspace/descriptor/: Cargo.toml
dna/zomes/integrity/metaspace/descriptor/src/: lib.rs
dna/zomes/integrity/metaspace/exports/: Cargo.toml
dna/zomes/integrity/metaspace/exports/src/: lib.rs  testing.rs
dna/zomes/integrity/metaspace/mapping/: Cargo.toml
dna/zomes/integrity/metaspace/mapping/src/: lib.rs
dna/zomes/integrity/property/: Cargo.toml
dna/zomes/integrity/property/src/: lib.rs
examples/: holon_descriptors.md  property_descriptors.md
holonspace/: README.md
holonspace/mid/: README.md
holonspace/store/: README.md
metaspace/: README.md
metaspace/dna/zomes/coordinator/: README.md
metaspace/dna/zomes/coordinator/api/: README.md
metaspace/dna/zomes/coordinator/impl/: README.md
metaspace/dna/zomes/integrity/: README.md
metaspace/mid/: README.md
metaspace/mid/api/: README.md
metaspace/mid/api/controller/: README.md  tmp
metaspace/mid/impl/: README.md
metaspace/store/: README.md
tests/: package.json
tests/src/: index.ts
tests/src/forum/comments/: entry_def_0.ts
tests/src/forum/lobby/: entry_def_0.ts
tests/src/forum/posts/: post.ts
tests/src/forum/profiles/: entry_def_0.ts
tests/src/forum/reactions/: entry_def_0.ts
tests/src/forum/topics/: entry_def_0.ts
tests/src/holon/: holon.test.ts
ui/: README.md  angular.json  package-lock.json  package.json  tsconfig.app.json
ui/src/: holochain-app.ts  index.html
ui/src/app/: app.component.html  app.component.ts  app.module.ts
ui/src/app/components/toolbar/: toolbar.component.html  toolbar.component.ts
ui/src/app/components/viewer/: viewer.component.html  viewer.component.ts
ui/src/app/receptors/: holon.receptor.ts  typedescriptor.receptor.ts
ui/src/app/services/: holochain.service.ts  store.factory.service.ts
ui/src/app/stores/: holon.store.ts  typedescriptor.store.ts
ui/src/app/toolbar/: toolbar.component.html  toolbar.component.ts
ui/src/app/viewer/: viewer.component.html  viewer.component.ts
ui/src/components/forum/comments/: create-entry-def-0.ts  entry-def-0-detail.ts
ui/src/components/forum/lobby/: create-entry-def-0.ts  entry-def-0-detail.ts
ui/src/components/forum/posts/: create-post.ts  post-detail.ts
ui/src/components/forum/profiles/: create-entry-def-0.ts  entry-def-0-detail.ts
ui/src/components/forum/reactions/: create-entry-def-0.ts  entry-def-0-detail.ts
ui/src/components/forum/topics/: create-entry-def-0.ts  entry-def-0-detail.ts
ui/src/environments/: environment.prod.ts  environment.ts
ui/src/types/forum/: posts.ts
vspace/dna/zomes/coordinator/api/: README.md
vspace/dna/zomes/coordinator/impl/: README.md
vspace/dna/zomes/integrity/model/: README.md
workdir/: dna.yaml  happ.yaml  web-happ.yaml
