[workspace]
resolver = "2"
members = [
    "dna/zomes/integrity/holon_space/holon",
    "dna/zomes/integrity/property",
    "dna/zomes/integrity/meta_space/descriptor",
    "dna/zomes/integrity/meta_space/exports",
    "dna/zomes/integrity/meta_space/mapping",
    "dna/zomes/coordination/interface",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
