[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
    "crates/coordinator-zomes/apis/holon_coord_api",
    "crates/coordinator-zomes/apis/type_desc_coord_api",
    "crates/coordinator-zomes/impls/holon_coord_impl",
    "crates/coordinator-zomes/impls/type_desc_coord_impl",
    "crates/coordinator-zomes/externs",
    "crates/integrity-zomes/holon_integ",
    "crates/integrity-zomes/type_desc_integ",

]

[workspace.dependencies]
hdi = "0.2"
hdk = "0.1.0"
holochain = "0.1.0"
serde = "1"
derive-new = "0.5"

[workspace.dependencies.hc_zome_coordinator_holon_api]
path = "crates/coordinator-zomes/apis/holon_coord_api"

[workspace.dependencies.hc_zome_coordinator_type_desc_api]
path = "crates/coordinator-zomes/apis/type_desc_coord_api"

[workspace.dependencies.hc_zome_coordinator_holon_impl]
path = "crates/coordinator-zomes/impls/holon_coord_impl"

[workspace.dependencies.hc_zome_coordinator_type_desc_impl]
path = "crates/coordinator-zomes/impls/type_desc_coord_impl"

[workspace.dependencies.hc_zome_coordinator_externs]
path = "crates/coordinator-zomes/externs"

[workspace.dependencies.hc_zome_integrity_holon]
path = "crates/integrity-zomes/holon_integ"

[workspace.dependencies.hc_zome_integrity_type_desc]
path = "crates/integrity-zomes/type_desc_integ"

