[package]
name = "hc_zome_coordinator_externs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_coordinator_externs"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
hc_zome_coordinator_type_desc_api = { workspace = true }
hc_zome_coordinator_type_desc_impl =  { workspace = true }
hc_zome_integrity_type_desc = { workspace = true }


[dev-dependencies]
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { version = "0.1.3", default-features = false, features = [
  "test_utils",
] }

# fixt = "0.1"
futures = { version = "0.3.1", default-features = false }
tokio = { version = "1.3", features = ["full"] }