[package]
name = "hc_zome_integrity_holon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_integrity_holon"

[dependencies]
hdk = { workspace = true }
hdi = { workspace = true }
serde = { workspace = true }

descriptors = { path = "../../libs/types/descriptors" }

