[package]
name = "hc_zome_coordinator_type_desc_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_coordinator_type_desc_api"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
derive-new = { workspace = true }

hc_zome_integrity_type_desc = { workspace = true }
