[package]
name = "hc_zome_coordinator_type_desc_impl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_coordinator_type_desc_impl"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
derive-new = { workspace = true }

descriptors = { path = "../../../libs/types/descriptors" }
hc_zome_coordinator_type_desc_api = { workspace = true }
