[package]
name = "hc_zome_coordination_interface"
version = "0.0.1"
authors = [ "Zeek" ]
edition = "2021"

[lib]
name = "hc_zome_coordination_interface"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1"
derive_more = "0"
chrono = "0.4"
holo_hash = { version = "=0.0.30", features = ["encoding"] }