[package]
name = "hc_zome_integrity_property"
version = "0.0.1"
authors = [ "Zeek" ]
edition = "2021"

[lib]
name = "hc_zome_integrity_property"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1"
derive_more = "0"
hdi = "0.0.14"
holo_hash = { version = "=0.0.30", features = ["encoding"] }