[package]
name = "hc_zome_integrity_holonspace_holon"
version = "0.0.1"
authors = [ "Zeek" ]
edition = "2021"

[lib]
name = "hc_zome_integrity_holonspace_holon"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1"
derive_more = "0"
chrono = "0.4"
hdi = "0.0.14"
holo_hash = { version = "=0.0.30", features = ["encoding"] }

hc_zome_integrity_metaspace_descriptor = {path = "../../meta_space/descriptor"}