[package]
name = "hc_zome_integrity_metaspace_descriptor"
version = "0.0.1"
authors = [ "Zeek" ]
edition = "2021"

[lib]
name = "hc_zome_integrity_metaspace_descriptor"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1"
derive_more = "0"
hdk = {version = "0.0.153", features = ["encoding"]}
hdi = "0.1.2"
holo_hash = { version = "0.0.32", features = ["encoding"] }
