[package]
name = "hc_zome_integrity_metaspace_mapping"
version = "0.0.1"
authors = [ "Steve", "Zeek" ]
edition = "2021"

[lib]
name = "hc_zome_integrity_metaspace_mapping"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1"
derive_more = "0"
derive-new = "0.5"
hdi = "0.0.14"
holo_hash = { version = "=0.0.30", features = ["encoding"] }

hc_zome_integrity_metaspace_descriptor = {path = "../descriptor"}